Istio/PeerAuth.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: PeerAuthentication
metadata:
  name: peer-authentication
  namespace: opentripplanner
spec:
  mtls:
    mode: STRICT
