Istio/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: otp-gateway
  namespace: opentripplanner
spec:
  selector:
    istio: ingressgateway  
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    - "https://www.opentripplanner.org/"
    http:
      route:
      - match:
        - uri:
            prefix: "/otp"
        route:
        - destination:
            host: otp-core-service.opentripplanner.svc.cluster
            port:
              number: 8080
