Istio/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otp-core
  namespace: opentripplanner
spec:
  host: my-app-service  
  subsets:
    - name: stable  
      labels:
        version: v1
    - name: canary  
      labels:
        version: v2
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: MUTUAL
      credentialName: tls-secret
      privateKey: sds
      serverCertificate: sds
