Istio/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: otp-core
  namespace: opentripplanner
spec:
  hosts:
    - "www.opentripplanner.org"
  http:
    - route:
        - destination:
            host: https://www.opentripplanner.org/
            subset: stable  
          weight: 100  
        - destination:
            host: https://www.opentripplanner.org/
            subset: canary  
          weight: 0
